...
                        <viewControllerLayoutGuide type="bottom" id="O0A-Yw-l11"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="NX4-kh-BCa">
                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4CQ-sX-cra">
                                <rect key="frame" x="20" y="8" width="560" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="e1K-38-q2d"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="me2-Wg-zWN">
                                <rect key="frame" x="20" y="56" width="560" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="CNA-3G-I3n"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Location Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-sJ-tfX">
                                <rect key="frame" x="20" y="104" width="560" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="675-pc-mPQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oo9-b6-9TS">
                                <rect key="frame" x="20" y="152" width="560" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="F5e-0b-Okq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="od2-mi-bAo">
                                <rect key="frame" x="20" y="200" width="560" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="SPg-NX-gPm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dud-l5-sId">
                                <rect key="frame" x="209" y="248" width="48" height="30"/>
                                <state key="normal" title="Cancel"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0c0-ef-FNB">
                                <rect key="frame" x="357" y="248" width="34" height="30"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="save" destination="DD3-zI-cpm" eventType="touchUpInside" id="Dve-85-U4w"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
